# llm-wiki-starter

./: pyproject.toml
.github/ISSUE_TEMPLATE/: wiki-health-check.md
.github/workflows/: validate.yml
docs/: agent-runbook.md
meta/: index.md  log.md
projects/decisions/: adopt-docling-pdf-ingest.md
tests/: test_pdf_ingest.py  test_validate_repo_health.py
