[project]
name = "llm-wiki-starter"
version = "0.1.0"
description = "A starter for an agent-maintained Markdown wiki."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "PyYAML>=6.0",
]

[dependency-groups]
dev = []
pdf = [
  "docling>=2.93,<3",
  "pandas>=2.0",
  "pypdf>=6.0",
]

[tool.uv]
package = false
